fix to prevent flickering

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ p {
 	padding: 16px;
 	border-radius: 8px;
 	gap: 16px;
+	line-height: 0;
 }
 
 .lineContainer {
